menambahkan buat daftar akun baru

--- a/login.html
+++ b/login.html
@@ -98,7 +98,7 @@
             <div class="checkbox mb-3">
                 <label> Lupa Kata Sandi ? </label>
                 <div class="social-auth-links text-center mb-5">
-                    <a href="#" class="btn btn-block btn-success"> <i class="fab fa-google-plus mr-2"></i> Buat Akun Baru </a>
+                    <a href="tambah-akun.html" class="btn btn-block btn-success"> <i class="fab fa-google-plus mr-2"></i> Buat Akun Baru </a>
                 </div>
                 <p class="mt-5 mb-3 text-muted">Erika&copy; 2022–2023</p>
         </form>
