--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- Bootstap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 
+    <!-- AOS-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS-->
     <link rel="stylesheet" href="style.css" />
 
@@ -36,7 +39,7 @@
                         <a class="nav-link" href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#gallery">Gallery</a>
+                        <a class="nav-link" href="#destinasi">Destinasi</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -53,7 +56,7 @@
     <div class="jumbotron text-center">
         <img src="img/erika.jpeg" alt="Erikaamp" width="150" class="rounded-circle img-thumbnail" />
         <h1 class="display-4">Erika Ardya Mesia Putri</h1>
-        <p class="lead">Mahasiswi</p>
+        <p class="lead"></p>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" 
           fill-opacity="1" d="M0,224L26.7,197.3C53.3,171,107,117,160,106.7C213.3,96,267,128,320,160C373.3,192,427,224,480,213.3C533.3,203,587,149,640,138.7C693.3,128,747,160,800,170.7C853.3,181,907,171,960,186.7C1013.3,203,1067,245,1120,256C1173.3,267,1227,245,1280,208C1333.3,171,1387,117,1413,90.7L1440,64L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
         <!--akhir jumbotron-->
@@ -67,10 +70,10 @@
                     </div>
                 </div>
                 <div class="row justify-content-center fs-5 text-center">
-                    <div class="col-md-4">
+                    <div class="col-md-4" data-aos="fade-right">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sapiente, pariatur amet! Tempore aut doloremque esse magni, maiores quos. Earum, nam!</p>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4" data-aos="fade-left" data-aos-delay="200">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non nisi sed ad possimus sapiente nihil maiores, nostrum nobis eveniet assumenda eaque ipsam tempore cumque at.</p>
                     </div>
                 </div>
@@ -81,17 +84,17 @@
         </section>
         <!--akhir about-->
 
-        <!-- Gallery-->
-        <section id="gallery">
+        <!-- Destinasi -->
+        <section id="destinasi">
             <div class="container ">
                 <div class="row text-center mb-3">
                     <div class="col">
-                        <h2>My Gallery</h2>
+                        <h2> Destinasi Pilihan </h2>
                     </div>
                 </div>
                 <div class="row justify-content-center">
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-left" data-aos-duration="500">
                             <h5>Bali, Indonesia</h5>
                             <img src="img/projects/project1.jpg" class="card-img-top" alt="Projects1">
                             <div class="card-body">
@@ -100,7 +103,7 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
                             <h5>Paris, Francis</h5>
                             <img src="img/projects/project2.jpg" class="card-img-top" alt="Projects2">
                             <div class="card-body">
@@ -109,29 +112,29 @@
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="200">
                             <h5>Swiss, Eropa</h5>
                             <img src="img/projects/project3.jfif" class="card-img-top" alt="Projects3">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                                <p class="card-text">Swiss adalah sebuah negara maju yang terletak di benua Eropa, negara paling indah di Eropa, kota yang sangat cantik sehingga menjadi daya tarik utama wisatawan datang ke negara ini.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="250">
                             <h5>Tokyo, Jepang</h5>
                             <img src="img/projects/project4.jpg" class="card-img-top" alt="Projects3">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                                <p class="card-text">Jepang adalah sebuah negara Kepulauan yang terletak di Benua Asia bagian Timur, Tokyo menawarkan beragam destinasi wisata yang menarik, serta mempunyai ciri khas bunga sakura dan gunung fuji</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 mb-3">
-                        <div class="card">
+                        <div class="card" data-aos="flip-right" data-aos-duration="500" data-aos-delay="300">
                             <h5>Alaska, Amerika Serikat</h5>
                             <img src="img/projects/project5.jpg" class="card-img-top" alt="Projects3">
                             <div class="card-body">
-                                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content</p>
+                                <p class="card-text">Alaska merupakan salah satu negara bagian yang ada di Amerika Serikat yang terluas, Wisata di alaska pemandangan air terjun yang mengalir di atass es salju, serta bisa melihat aurora hanya negara tertentu</p>
                             </div>
                         </div>
                     </div>
@@ -139,7 +142,73 @@
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L24,128C48,128,96,128,144,138.7C192,149,240,171,288,181.3C336,192,384,192,432,213.3C480,235,528,277,576,256C624,235,672,149,720,117.3C768,85,816,107,864,128C912,149,960,171,1008,170.7C1056,171,1104,149,1152,160C1200,171,1248,213,1296,218.7C1344,224,1392,192,1416,176L1440,160L1440,320L1416,320C1392,320,1344,320,1296,320C1248,320,1200,320,1152,320C1104,320,1056,320,1008,320C960,320,912,320,864,320C816,320,768,320,720,320C672,320,624,320,576,320C528,320,480,320,432,320C384,320,336,320,288,320C240,320,192,320,144,320C96,320,48,320,24,320L0,320Z"></path></svg>
         </section>
-        <!--Akhir Gallery-->
+        <!--Akhir Destinasi-->
+        <!-- Gallery -->
+        <section id="gallery">
+            <div class="container">
+                <div class="row text-center mb-3">
+                    <div class="col">
+                        <h2>Gallery</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto1.jpg" alt="gambar 1" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto2.jpg" alt="gambar 2" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto3.jpg" alt="gambar 3" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto4.jpg" alt="gambar 4" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto5.jpg" alt="gambar 5" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto6.jpg" alt="gambar 6" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto7.jpg" alt="gambar 7" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto8.jpg" alt="gambar 8" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto9.jpg" alt="gambar 9" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/poto10.jpg" alt="gambar 10" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+                <path fill="#CE6D6D" fill-opacity="1" d="M0,224L26.7,197.3C53.3,171,107,117,160,106.7C213.3,96,267,128,320,160C373.3,192,427,224,480,213.3C533.3,203,587,149,640,138.7C693.3,128,747,160,800,170.7C853.3,181,907,171,960,186.7C1013.3,203,1067,245,1120,256C1173.3,267,1227,245,1280,208C1333.3,171,1387,117,1413,90.7L1440,64L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path>
+        </section>
+        <!-- Akhir Gallery-->
+
         <!--Contact-->
         <section id="contact">
             <div class="container">
@@ -177,9 +246,27 @@
                     </div>
                 </div>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#dc3545" fill-opacity="1" d="M0,224L34.3,208C68.6,192,137,160,206,170.7C274.3,181,343,235,411,245.3C480,256,549,224,617,197.3C685.7,171,754,149,823,170.7C891.4,192,960,256,1029,245.3C1097.1,235,1166,149,1234,138.7C1302.9,128,1371,192,1406,224L1440,256L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" 
+                fill-opacity="1" d="M0,224L26.7,197.3C53.3,171,107,117,160,106.7C213.3,96,267,128,320,160C373.3,192,427,224,480,213.3C533.3,203,587,149,640,138.7C693.3,128,747,160,800,170.7C853.3,181,907,171,960,186.7C1013.3,203,1067,245,1120,256C1173.3,267,1227,245,1280,208C1333.3,171,1387,117,1413,90.7L1440,64L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
         </section>
         <!--Akhir Contact-->
+        <section id="gallery">
+            <div class="container">
+                <div class="row text-center mb-3">
+                    <div class="col">
+                        <h2>Scan hasil contact melalu barcode:</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-3">
+                        <a href="#">
+                            <img src="img/projects/Hasil Pesan dari portfolio.png" alt="gambar 1" class="img-fluid gallery-img">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#dc3545" fill-opacity="1" d="M0,224L34.3,208C68.6,192,137,160,206,170.7C274.3,181,343,235,411,245.3C480,256,549,224,617,197.3C685.7,171,754,149,823,170.7C891.4,192,960,256,1029,245.3C1097.1,235,1166,149,1234,138.7C1302.9,128,1371,192,1406,224L1440,256L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+        </section>
 
         <!--footer-->
         <footer class="bg-danger text-white text-center pb-5">
@@ -188,6 +275,51 @@
         <!--Akhir footer-->
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js " integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM " crossorigin="anonymous "></script>
+
+        <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+        <script>
+            const galleryImage = document.querySelectorAll('.gallery-img');
+
+            galleryImage.forEach((img, i) => {
+                img.dataset.aos = 'fade-down';
+
+
+            });
+
+            AOS.init({
+                once: true,
+                duration: 2000,
+            });
+        </script>
+
+        <script src="https:cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/TextPlugin.min.js"></script>
+        <script>
+            gsap.registerPlugin(TextPlugin);
+            gsap.to('.lead', {
+                duration: 1.5,
+                delay: 1.5,
+                text: 'Mahasiswi'
+            });
+            gsap.from('.jumbotron img', {
+                duration: 1,
+                rotateY: 360,
+                opacity: 0
+            });
+            gsap.from('.navbar', {
+                duration: 1.5,
+                y: '-100%',
+                opacity: 0,
+                ease: 'bounce'
+            });
+            gsap.from('.display-4', {
+                duration: 1,
+                x: -50,
+                opacity: 0,
+                delay: 0.5,
+                ease: 'back'
+            });
+        </script>
 
         <script>
             const scriptURL = 'https://script.google.com/macros/s/AKfycbxmEzQWXm3qoLwoleRcOUjfN1QRh70CJXvDcnL_4b45AqVnQn2LPpGNNXMsrIBUS94r/exec';
